--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,7 +29,10 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
+  cloud_firestore: ^1.0.0
+  firebase_auth: ^1.0.0
+  provider: ^6.0.1
+  get: ^4.6.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
