--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   google_fonts: ^2.0.0
   flutter_screenutil: ^5.0.2
+  material_design_icons_flutter: ^5.0.6595
 
 dev_dependencies:
   flutter_test:
