--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,9 @@ dependencies:
   google_fonts: ^2.1.1
   flutter_screenutil: ^5.0.2
   material_design_icons_flutter: ^5.0.6595
+  tflite_flutter: ^0.9.0
+  tflite_flutter_helper: ^0.3.1
+  random_color: ^1.0.6-nullsafety
 
 dev_dependencies:
   flutter_test:
@@ -64,7 +67,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-     - assets/images/google_logo.png
+     - assets/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
