--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,20 +29,23 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  provider: ^6.0.2
+  provider: ^6.0.1
   get: ^4.6.1
   carousel_slider: ^4.0.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.4
-  google_fonts: ^2.1.1
+  cupertino_icons: ^1.0.2
+  google_fonts: ^2.0.0
   flutter_screenutil: ^5.0.2
-  material_design_icons_flutter: ^5.0.6595
+
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+
+  camera: ^0.9.4+5
+  tflite: ^1.1.2
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -64,7 +67,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-     - assets/images/google_logo.png
+    - assets/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
@@ -77,11 +80,12 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  fonts:
-    - family: Schyler
-      fonts:
-        - asset: assets/fonts/Millimetre-Bold.otf
-        - asset: assets/fonts/Millimetre-Regular.otf
+  # fonts:
+  #   - family: Schyler
+  #     fonts:
+  #       - asset: fonts/Schyler-Regular.ttf
+  #       - asset: fonts/Schyler-Italic.ttf
+  #         style: italic
   #   - family: Trajan Pro
   #     fonts:
   #       - asset: fonts/TrajanPro.ttf
